# photon

./: .gitignore  CMakeLists.txt  README.md  main.c  mkdocs.yml  photon.c  requirements.txt  secrets.example.h
.cache/clangd/index/: lwipopts.h.3F90245C874660AF.idx  photon.c.2FF9D42A5DC9B350.idx
.github/: RELEASE_TEMPLATE.md  release.yml
.github/workflows/: docs.yml  push.yml  release.yml
build-tests/: Makefile  cmake_install.cmake  compile_commands.json
build-tests/pico-sdk/: Makefile  cmake_install.cmake
build-tests/pico-sdk/docs/: Makefile  cmake_install.cmake
build-tests/pico-sdk/src/: Makefile  cmake_install.cmake
build-tests/pico-sdk/tools/: Makefile  cmake_install.cmake
build-tests/tests/: Makefile  cmake_install.cmake
docs/: README.md  index.md
docs/contributing/: building-a-mode.md  index.md
docs/contributing/api/: display.md  input.md  middleware.md  modes.md
docs/getting-started/: configuration.md  flashing.md  hardware.md
docs/progress/: index.md
include/: led.h  wifi.h
pio/: ws2812.pio
src/: global.c  global.h  led.c  led.h  menu.c  menu.h  wifi.c
src/common/: const.c  const.h  location.c  location.h  macro.c  macro.h  secrets_config.c  secrets_config.h
src/display/: displays.c  displays.h  glyphs.c  glyphs.h  graphics.c  graphics.h  led.c  led.h  matrix.c  matrix.h
src/input/: input.c  input.h
src/middleware/: http.c  http.h  wifi.c  wifi.h
src/modes/: game.c  game.h  games.c  stocks.c  stocks.h  ticker.c  ticker.h  weather.c  weather.h
src/utils/: print.c  print.h
tests/: CMakeLists.txt  test_example.c
(+198 files in other folders)
